--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,30 +7,86 @@ body {
   color: rgb(200, 200, 200);
   font-family: sans-serif;
   margin: 0;
+  width: 100%;
+  padding: 5rem;
+}
+body h1 {
+  font-size: 3em;
+  color: rgb(255, 212, 0);
+  margin: 0;
+}
+body h2 {
+  font-size: 4em;
+}
+body h3 {
+  font-size: 2.5em;
+}
+body a {
+  text-decoration: none;
+  color: rgb(255, 212, 0);
 }
 
-.container, header, footer {
-  width: 100%;
-  padding: 1rem;
+header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5em;
 }
 
 .container, footer {
   text-align: center;
 }
 
-h1 {
-  color: rgb(255, 212, 0);
+.section-introduction .article-introduction .photo-cv {
+  width: 70%;
+  border-radius: 2em;
+  border: solid 2px rgb(200, 200, 200);
+}
+.section-introduction .article-introduction p {
+  font-size: 1.5em;
+  text-align: justify;
 }
 
-a {
-  text-decoration: none;
-  color: rgb(255, 212, 0);
+.section-projects {
+  margin-top: 10em;
+}
+.section-projects .div-projects {
+  display: flex;
+  justify-content: center;
+  gap: 3em;
+  flex-wrap: wrap;
+}
+.section-projects .div-projects .article-project {
+  border-radius: 1em;
+  border: 1px solid;
+  width: 45%;
+  height: auto;
+}
+.section-projects .div-projects .article-project .img-project {
+  width: 100%;
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
+}
+.section-projects .div-projects .article-project .div-project {
+  padding: 1em 1em 2.5em;
+}
+.section-projects .div-projects .article-project .div-project h3 {
+  margin: 0 0 1em;
+}
+.section-projects .div-projects .article-project .div-project .a-project {
+  background-color: rgb(255, 212, 0);
+  color: rgb(31, 31, 31);
+  border-radius: 1em;
+  padding: 0.7em 1em;
+  font-size: 1.5em;
 }
 
-.photo-cv {
-  width: 30%;
+.section-skills {
+  margin-top: 10em;
 }
 
+.section-contact {
+  margin-top: 10em;
+}
 .section-contact form {
   display: flex;
   flex-direction: column;
@@ -39,6 +95,10 @@ a {
 }
 .section-contact form div {
   margin: 0 auto;
+}
+
+.section-networks {
+  margin-top: 10em;
 }
 
 /*# sourceMappingURL=style.css.map */
