--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,40 +11,115 @@ body {
     color: $color-font;
     font-family: sans-serif;
     margin: 0;
+    width: 100%;
+    padding: 5rem;
+
+    h1 {
+        font-size: 3em;
+        color: $color-title;
+        margin: 0;
+    }
+
+    h2 {
+        font-size: 4em;
+    }
+
+    h3 {
+        font-size: 2.5em;
+    }
+    
+    a {
+        text-decoration: none;
+        color: $color-title;
+    }
 }
 
-.container, header, footer {
-    width: 100%;
-    padding: 1rem;
+header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5em;
 }
 
 .container, footer {
     text-align: center;
 }
 
-h1 {
-    color: $color-title;
+.section-introduction {
+
+    .article-introduction {
+
+        .photo-cv {
+            width: 70%;
+            border-radius: 2em;
+            border: solid 2px $color-font;
+        }
+        
+        p {
+            font-size: 1.5em;
+            text-align: justify;
+        }
+    }
 }
 
-a {
-    text-decoration: none;
-    color: $color-title;
+.section-projects {
+    margin-top: 10em;
+
+    .div-projects {
+        display: flex;
+        justify-content: center;
+        gap: 3em;
+        flex-wrap: wrap;
+
+        .article-project {
+            border-radius: 1em;
+            border: 1px solid;
+            width: 45%;
+            height: auto;
+
+            .img-project {
+                width: 100%;
+                border-top-left-radius: 1em;
+                border-top-right-radius: 1em;
+            }
+
+            .div-project {
+                padding: 1em 1em 2.5em;
+                
+                h3 {
+                    margin: 0 0 1em;
+                }
+
+                .a-project {
+                    background-color: $color-title;
+                    color: $body-color;
+                    border-radius: 1em;
+                    padding: 0.7em 1em;
+                    font-size: 1.5em;
+                }
+            }
+        }
+    }
 }
 
-.photo-cv {
-    width: 30%;
+.section-skills {
+    margin-top: 10em;
 }
 
 .section-contact {
-    
+    margin-top: 10em;
+
     form {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 1.5em;
-        
+
         div {
             margin: 0 auto;
         }
     }
+}
+
+.section-networks {
+    margin-top: 10em;
 }
