:feat:(home) ajout des compétences

--- a/assets/css/_config.scss
+++ b/assets/css/_config.scss
@@ -1,4 +1,8 @@
 // Variables
 $body-color: rgb(31,31,31);
+$article-color: rgb(61,61,61);
+$navbar-color: rgb(81,81,81);
+$form-color: rgb(101,101,101);
 $color-font: rgb(200,200,200);
 $color-title: rgb(255,212,0);
+$color-hover: rgb(215,172,0);
