--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,6 @@
 // Imports
 @import 'config';
-//@import 'lightmode';
-
+@import 'cols';
 * {
     box-sizing: border-box;
 }
@@ -14,33 +13,47 @@ body {
     width: 100%;
     padding: 5rem;
 
-    h1 {
-        font-size: 3em;
-        color: $color-title;
-        margin: 0;
-    }
-
     h2 {
-        font-size: 4em;
+        font-size: 4.5em;
     }
 
     h3 {
-        font-size: 2.5em;
+        font-size: 3em;
     }
-    
+
     a {
         text-decoration: none;
         color: $color-title;
     }
+    
+    i {
+        
+        &:hover {
+            color: $color-hover;
+        }
+    }
+    
 }
 
 header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5em;
+    align-items: center;
+    
+    h1 {
+        font-size: 3em;
+        color: $color-title;
+        margin: 0;
+    }
+    
+    a {
+        font-size: 3em;
+    }
 }
 
-.container, footer {
+.container,
+footer {
     text-align: center;
 }
 
@@ -53,10 +66,10 @@ header {
             border-radius: 2em;
             border: solid 2px $color-font;
         }
-        
+
         p {
             font-size: 1.5em;
-            text-align: justify;
+            text-align: center;
         }
     }
 }
@@ -65,16 +78,12 @@ header {
     margin-top: 10em;
 
     .div-projects {
-        display: flex;
-        justify-content: center;
-        gap: 3em;
-        flex-wrap: wrap;
 
         .article-project {
             border-radius: 1em;
             border: 1px solid;
-            width: 45%;
-            height: auto;
+            width: 100%;
+            margin-bottom: 4em;
 
             .img-project {
                 width: 100%;
@@ -84,7 +93,7 @@ header {
 
             .div-project {
                 padding: 1em 1em 2.5em;
-                
+
                 h3 {
                     margin: 0 0 1em;
                 }
@@ -94,7 +103,11 @@ header {
                     color: $body-color;
                     border-radius: 1em;
                     padding: 0.7em 1em;
-                    font-size: 1.5em;
+                    font-size: 1.8em;
+                    
+                    &:hover {
+                        background-color: $color-hover;
+                    }
                 }
             }
         }
@@ -102,7 +115,55 @@ header {
 }
 
 .section-skills {
-    margin-top: 10em;
+    margin-top: 6em;
+    
+    h3 {
+        color: $color-title;
+    }
+
+    .article-webdev {
+        margin-top: 7em;
+        background-color: $article-color;
+        padding: 2em 2em 5em;
+        border-radius: 3em;
+
+        .div-webdev {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            gap: 3em;
+
+            div {
+                width: 45%;
+
+                p {
+                    font-size: 3em;
+                }
+            }
+        }
+    }
+
+    .article-softskills {
+        margin-top: 7em;
+        background-color: $article-color;
+        padding: 2em 2em 5em;
+        border-radius: 3em;
+
+        .div-transversal {
+            display: flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            gap: 3em;
+
+            div {
+                width: 45%;
+
+                p {
+                    font-size: 2.95em;
+                }
+            }
+        }
+    }
 }
 
 .section-contact {
@@ -111,15 +172,94 @@ header {
     form {
         display: flex;
         flex-direction: column;
+        justify-content: space-evenly;
         align-items: center;
+        font-size: 3em;
         gap: 1.5em;
 
         div {
-            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5em;
+            text-align: left;
+            
+            input {
+                font-size: 1em;
+                padding: 1em;
+                border-radius: 1em;
+            }
+
+            textarea {
+                font-size: 1.35em;
+                padding: 0.5em 1em 8em;
+                border-radius: 1em;
+            }
+        }
+        
+        button {
+            font-size: 1em;
+            padding: 0.5em 0.8em;
+            background-color: $color-title;
+            border-radius: 0.7em;
+            color: $body-color;
+            
+            &:hover {
+                background-color: $color-hover;
+            }
         }
     }
 }
 
 .section-networks {
     margin-top: 10em;
+    
+    nav {
+        display: flex;
+        justify-content: space-around;
+        background-color: $article-color;
+        padding: 4em 0em;
+        border-radius: 1em;
+        
+        i {
+            font-size: 6em;
+        }
+        
+        p {
+            font-size: 3em;
+            margin-top: 0.3em;
+            margin-bottom: 0;
+        }
+    }
+}
+
+.section-navbar {
+    margin-top: 10em;
+    margin-bottom: 2em;
+    position: sticky;
+    bottom: 8em;
+    background-color: $navbar-color;
+    padding: 5em 0em;
+    border-radius: 2em;
+    
+    nav {
+        display: flex;
+        justify-content: space-evenly;
+        
+        i {
+            font-size: 4em;
+        }
+        
+        p {
+            font-size: 1.7em;
+            margin-bottom: 0;
+        }
+    }
+}
+
+footer {
+    border-top: solid 1px $color-font;
+    
+    p {
+        margin: 0;
+    }
 }
