:feat:(dashboard) ajout de la page et de la connexion en admin

--- a/assets/css/_config.scss
+++ b/assets/css/_config.scss
@@ -5,4 +5,6 @@ $navbar-color: rgb(81,81,81);
 $form-color: rgb(101,101,101);
 $color-font: rgb(200,200,200);
 $color-title: rgb(255,212,0);
+$color-categories: rgb(255,72,0);
+$color-labels: rgb(255,146,30);
 $color-hover: rgb(215,172,0);
