--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,7 +42,7 @@ header {
     align-items: center;
     
     h1 {
-        font-size: 3em;
+        font-size: 1.2em;
         color: $color-title;
         margin: 0;
     }
@@ -108,6 +108,29 @@ footer {
                     &:hover {
                         background-color: $color-hover;
                     }
+                }
+                
+                .div-labels {
+                    display: flex;
+                    justify-content: space-evenly;
+                    margin-bottom: 2em;
+                    font-size: 2em;
+                    
+                    .labels {
+                        background-color: $color-labels;
+                        color: $body-color;
+                        border-radius: 1em;
+                        padding: 0.5em;
+                    }
+                }
+                
+                p {
+                    margin: 0;
+                }
+                
+                .p-categories {
+                    font-size: 2em;
+                    margin-bottom: 2em;
                 }
             }
         }
@@ -253,6 +276,35 @@ footer {
             font-size: 1.7em;
             margin-bottom: 0;
         }
+    }
+}
+
+.section-details {
+    
+    img {
+        width: 100%;
+        height: auto;
+    }
+    
+    div {
+        display: flex;
+        justify-content: space-evenly;
+        font-size: 2em;
+        
+        .labels {
+            background-color: $color-labels;
+            color: $body-color;
+            border-radius: 1em;
+            padding: 0.5em;
+        }
+    }
+    
+    &>p {
+        font-size: 2em;
+    }
+    
+    .p-desc {
+        font-size: 2em;
     }
 }
 
