--- a/views/project_details.phtml
+++ b/views/project_details.phtml
@@ -1,9 +1,11 @@
-<main class="container">
-    <section>
-        <img src="">
-        <h2>testtitre</h2>
-        <p>Category : </p>
-        <span>testspan</span>
-        <p>blablablobloblublu</p>
-    </section>
-</main>
+<section class="section-details">
+    <img src="assets/img/<?= htmlspecialchars($projectsArray->getProjectImg()) ?>" alt="Image du projet '<?= htmlspecialchars($projectsArray->getTitle()) ?>' ">
+    <h2><?= htmlspecialchars($projectsArray->getTitle()) ?></h2>
+    <p>Category : <?= htmlspecialchars($projectsArray->getCategoryName()) ?></p>
+    <div>
+        <?php foreach ($projectsArray->getLabels() as $label): ?>
+            <p class="labels"><?= htmlspecialchars($label['name']) ?></p>
+        <?php endforeach; ?>
+    </div>
+    <p class="p-desc"><?= htmlspecialchars($projectsArray->getProjectDescription()) ?></p>
+</section>
